# risingwave

./: .gitignore  CLAUDE.md  Dockerfile.rlenv
.claude/commands/: prepare-patch.md
.github/workflows/: mayhem.yml  sync.yml
mayhem/: Dockerfile  Dockerfile.dockerignore  Mayhemfile  build.sh  fuzz_parse_sql.mayhemfile  mayhem.Dockerfile  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: fuzz_parse_sql.rs
rlenv/: metadata.json
rlenv/mayhem/: meta  url
rlenv/mayhem/data/scripts/: build.sh  replay.sh  validate.sh
rlenv/problem/: prompt
rlenv/source/: commit
src/sqlparser/fuzz/: Cargo.toml
src/sqlparser/fuzz/.cargo/: config.toml
src/sqlparser/fuzz/fuzz_targets/: fuzz_parse_sql.rs
src/stream/src/executor/: global_simple_agg.rs  hash_agg.rs
src/stream/src/executor/aggregation/: mod.rs
src/stream/src/executor/managed_state/aggregation/: value.rs
src/workspace-hack/: Cargo.toml
