[package]
name = "fuzz"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
honggfuzz = "=0.5.55"
risingwave_sqlparser = { path = ".." }
# Pin hyper to pre-AsFd version for compatibility
hyper = "=0.14.27"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_parse_sql"
path = "fuzz_targets/fuzz_parse_sql.rs"
